// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP On Demand Radio Page A11y I can see the skip to content link 1`] = `"Langsung ke konten"`;

exports[`AMP On Demand Radio Page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP On Demand Radio Page AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
  },
}
`;

exports[`AMP On Demand Radio Page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=54&p=indonesian.bbc_indonesian_radio.w172xh267fpn19l.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:pips:w172xh267fpn19l]&x2=[amp]&x3=[news-indonesia]&x4=[id]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-episode]&x8=[simorgh]&x9=[Dunia+Pagi+Ini+-+BBC+News+Indonesia]&ref=\${documentReferrer}",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP On Demand Radio Page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "player-episode",
    "domain": "test.bbc.co.uk",
    "sections": "Indonesia, Indonesia - Radio",
    "title": "Dunia Pagi Ini - BBC News Indonesia",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP On Demand Radio Page Analytics comscore 1`] = `
Object {
  "extraUrlParams": Object {
    "comscorekw": "amp",
  },
  "vars": Object {
    "c2": "17986528",
  },
}
`;

exports[`AMP On Demand Radio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/indonesia"`;

exports[`AMP On Demand Radio Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. BBC tidak bertanggung jawab atas konten dari situs eksternal. Baca tentang peraturan baru terkait link eksternal."`;

exports[`AMP On Demand Radio Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Indonesia",
  "url": "/indonesia",
}
`;

exports[`AMP On Demand Radio Page Footer Link should match text and url 2`] = `
Object {
  "text": "Alasan Anda dapat mempercayai BBC News",
  "url": "https://www.bbc.com/indonesia/institutional-49283175",
}
`;

exports[`AMP On Demand Radio Page Footer Link should match text and url 3`] = `
Object {
  "text": "Peraturan Penggunaan",
  "url": "https://www.bbc.com/indonesia/institutional-37818421",
}
`;

exports[`AMP On Demand Radio Page Footer Link should match text and url 4`] = `
Object {
  "text": "Mengenai BBC",
  "url": "https://www.bbc.com/indonesia/institutional-37818424",
}
`;

exports[`AMP On Demand Radio Page Footer Link should match text and url 5`] = `
Object {
  "text": "Kebijakan tentang Privasi",
  "url": "https://www.bbc.com/indonesia/institutional-37818425",
}
`;

exports[`AMP On Demand Radio Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.co.uk/usingthebbc/cookies/",
}
`;

exports[`AMP On Demand Radio Page Footer Link should match text and url 7`] = `
Object {
  "text": "Hubungi BBC",
  "url": "https://www.bbc.com/indonesia/institutional-37818427",
}
`;

exports[`AMP On Demand Radio Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`AMP On Demand Radio Page Footer Link should match text and url 9`] = `
Object {
  "text": "Baca tentang peraturan baru terkait link eksternal.",
  "url": "https://www.bbc.com/indonesia/institutional/2011/02/000001_links",
}
`;

exports[`AMP On Demand Radio Page Header I can see the branding 1`] = `"BBC News, Indonesia"`;

exports[`AMP On Demand Radio Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Berita",
  "url": "/indonesia",
}
`;

exports[`AMP On Demand Radio Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Indonesia",
  "url": "/indonesia/topics/cjgn7k8yx4gt",
}
`;

exports[`AMP On Demand Radio Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Dunia",
  "url": "/indonesia/dunia",
}
`;

exports[`AMP On Demand Radio Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Viral",
  "url": "/indonesia/topics/cn5w7g2nq6dt",
}
`;

exports[`AMP On Demand Radio Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Liputan Mendalam",
  "url": "/indonesia/laporan-khusus-51267199",
}
`;

exports[`AMP On Demand Radio Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Majalah",
  "url": "/indonesia/majalah-51456120",
}
`;

exports[`AMP On Demand Radio Page I can see the brand title 1`] = `"Dunia Pagi Ini"`;

exports[`AMP On Demand Radio Page I can see the episode summary 1`] = `"Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia. Juga berita olahraga terbaru dan berbeda setiap harinya."`;

exports[`AMP On Demand Radio Page I can see the episode title 1`] = `"27 April 2020"`;

exports[`AMP On Demand Radio Page I can see the hero image 1`] = `"https://ichef.bbci.co.uk/images/ic/128x128/p08b4828.png"`;

exports[`AMP On Demand Radio Page Media Player a11y assistive technology can read the media player title 1`] = `"Pemutar Audio"`;

exports[`AMP On Demand Radio Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/indonesia/bbc_indonesian_radio/w172xh267fpn19l/id/amp?morph_env=live"`;

exports[`AMP On Demand Radio Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/indonesia/images/icons/icon-192x192.png",
}
`;

exports[`AMP On Demand Radio Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/indonesia/images/icons/icon-72x72.png",
}
`;

exports[`AMP On Demand Radio Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/indonesia/images/icons/icon-96x96.png",
}
`;

exports[`AMP On Demand Radio Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/indonesia/images/icons/icon-128x128.png",
}
`;

exports[`AMP On Demand Radio Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/indonesia/images/icons/icon-144x144.png",
}
`;

exports[`AMP On Demand Radio Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/indonesia/images/icons/icon-152x152.png",
}
`;

exports[`AMP On Demand Radio Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/indonesia/images/icons/icon-180x180.png",
}
`;

exports[`AMP On Demand Radio Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/indonesia/images/icons/icon-192x192.png",
}
`;

exports[`AMP On Demand Radio Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/indonesia/images/icons/icon-384x384.png",
}
`;

exports[`AMP On Demand Radio Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/indonesia/images/icons/icon-512x512.png",
}
`;

exports[`AMP On Demand Radio Page SEO Canonical link 1`] = `"http://localhost:7080/indonesia/bbc_indonesian_radio/w172xh267fpn19l"`;

exports[`AMP On Demand Radio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP On Demand Radio Page SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP On Demand Radio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP On Demand Radio Page SEO Heading level 1 1`] = `"Dunia Pagi Ini, 27 April 2020"`;

exports[`AMP On Demand Radio Page SEO Lang attribute 1`] = `"id"`;

exports[`AMP On Demand Radio Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/indonesia/bbc_indonesian_radio/w172xh267fpn19l",
        "@type": "WebPage",
        "name": "Dunia Pagi Ini",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png",
          "width": 1024,
        },
        "name": "BBC News Indonesia",
        "publishingPrinciples": "https://www.bbc.com/indonesia/institutional-49283175",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png",
      "url": "http://localhost:7080/indonesia/bbc_indonesian_radio/w172xh267fpn19l",
    },
    Object {
      "@type": "AudioObject",
      "description": "Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia. Juga berita olahraga terbaru dan berbeda setiap harinya.",
      "duration": "PT15M30S",
      "embedURL": "https://polling.test.bbc.co.uk/ws/av-embeds/media/indonesia/bbc_indonesian_radio/w172xh267fpn19l/id/amp?morph_env=live",
      "name": "Dunia Pagi Ini",
      "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p08b4828.png",
      "uploadDate": "2020-04-27T00:00:00.000Z",
    },
  ],
}
`;

exports[`AMP On Demand Radio Page SEO OG description 1`] = `"Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia. Juga berita olahraga terbaru dan berbeda setiap harinya."`;

exports[`AMP On Demand Radio Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png"`;

exports[`AMP On Demand Radio Page SEO OG image alt 1`] = `"BBC News Indonesia"`;

exports[`AMP On Demand Radio Page SEO OG locale 1`] = `"id-ID"`;

exports[`AMP On Demand Radio Page SEO OG site name 1`] = `"BBC News Indonesia"`;

exports[`AMP On Demand Radio Page SEO OG title 1`] = `"Dunia Pagi Ini - BBC News Indonesia"`;

exports[`AMP On Demand Radio Page SEO OG type 1`] = `"website"`;

exports[`AMP On Demand Radio Page SEO OG url 1`] = `"http://localhost:7080/indonesia/bbc_indonesian_radio/w172xh267fpn19l"`;

exports[`AMP On Demand Radio Page SEO Page title 1`] = `"Dunia Pagi Ini - BBC News Indonesia"`;

exports[`AMP On Demand Radio Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`AMP On Demand Radio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP On Demand Radio Page SEO Twitter creator 1`] = `"@bbcindonesia"`;

exports[`AMP On Demand Radio Page SEO Twitter description 1`] = `"Berita terbaru dari seluruh dunia dan ulasan peristiwa dari Indonesia. Juga berita olahraga terbaru dan berbeda setiap harinya."`;

exports[`AMP On Demand Radio Page SEO Twitter image alt 1`] = `"BBC News Indonesia"`;

exports[`AMP On Demand Radio Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/indonesia.png"`;

exports[`AMP On Demand Radio Page SEO Twitter site 1`] = `"@bbcindonesia"`;

exports[`AMP On Demand Radio Page SEO Twitter title 1`] = `"Dunia Pagi Ini - BBC News Indonesia"`;

exports[`AMP On Demand Radio Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"Dunia Pagi Ini, 27 April 2020"`;
